--- a/CloneMessengerBackendAPI.Web/packages.config
+++ b/CloneMessengerBackendAPI.Web/packages.config
@@ -43,6 +43,7 @@
   <package id="Mono.Reflection.Core" version="1.1.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net472" />
   <package id="Ninject" version="3.3.6" targetFramework="net472" />
+  <package id="Ninject.MVC5" version="3.3.0" targetFramework="net472" />
   <package id="Ninject.Web.Common" version="3.3.2" targetFramework="net472" />
   <package id="Ninject.Web.Common.WebHost" version="3.3.2" targetFramework="net472" />
   <package id="Ninject.Web.WebApi" version="3.3.1" targetFramework="net472" />
